--- a/cmd/1.fileAndDirectoryManagement.ipynb
+++ b/cmd/1.fileAndDirectoryManagement.ipynb
@@ -13,6 +13,41 @@
    "source": [
     "### cd – Changes the current directory"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### copy – Copies files from one location to another"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### del – Deletes files\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mkdir – Creates a new directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### move – Moves files or renames them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ren – Renames files or directories"
+   ]
   }
  ],
  "metadata": {
